--- a/index.html
+++ b/index.html
@@ -1,13 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My testing website</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Badmash</title>
+    <style>
+        body{
+            background-color: azure;
+        }
+        img{
+            height: 120px;
+        }
+        hr{
+            border-style: none;
+            border-top-style: dotted;
+            width: 5%;
+            border-color: gray;
+            border-width: 5px;
+            
+        }
+    </style>
 </head>
+
 <body>
-    <h1>Welcome to my WebPage</h1>
-    <a href="contactme.html">Contact Me</a>
+    <table>
+        <td><img src="photo.png" alt="profile image" /></td>
+        <td>
+            <h1>Tejas Langote</h1>
+            <p><em>Student at Bharati Vidhapith and intern in Profcyma Ltd</em></p>
+            <p>I am Web Developer and Python Developer, and also a Gamer!</p>
+        </td>
+    </table>
+    <hr />
+    <h3>Work Experience</h3>
+    <table>
+        <thead>
+            <tr>
+                <th>Dates</th>
+                <th>Work</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>2021-2022</td>
+                <td>You Broadband</td>
+            </tr>
+            <tr>
+                <td>2023-till Now</td>
+                <td>Profcyma Solutions</td>
+            </tr>
+        </tbody>
+    </table>
+    <hr>
+    <h3>skills</h3>
+    <table>
+        <tr>
+            <td>Python</td>
+            <td>⭐⭐⭐⭐</td>
+        </tr>
+        <tr>
+            <td>NodeJS</td>
+            <td>⭐⭐⭐⭐</td>
+        </tr>
+        <tr>
+            <td>Express</td>
+            <td>⭐⭐⭐⭐</td>
+        </tr>
+        <tr>
+            <td>Networking</td>
+            <td>⭐⭐⭐⭐</td>
+        </tr>
+        <tr>
+            <td>javascript</td>
+            <td>⭐⭐⭐</td>
+        </tr>
+        <tr>
+            <td>SQL</td>
+            <td>⭐⭐⭐</td>
+        </tr>
+    </table>
 </body>
+
 </html>
